Make methods async and refactor
Signed-off-by: Nihad <nihad-g@outlook.com>
(cherry picked from commit 9a0c29012ff48c5e58fd44ce54c5144798bb9b43)

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -10336,3 +10336,12 @@ ul.lined-list li:last-child {
     border-radius: 5px;
     max-width: 140px;
 }
+
+header ul.nav li a.nav-link {
+    border-radius: 1px;
+    transition: all .15s;
+} 
+
+header ul.nav li a.nav-link:hover {
+    background-color: #1767ad;
+}
