--- a/src/main/resources/templates/fragments/head-tag.html
+++ b/src/main/resources/templates/fragments/head-tag.html
@@ -1,5 +1,6 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
@@ -23,7 +24,7 @@
     <link rel="stylesheet" th:href="@{/fonts/fontawesome/css/solid.min.css}" />
 
     <link rel="stylesheet" th:href="@{/css/header.css}" />
-    <link rel="stylesheet" th:href="@{/css/main-legacy.css}" />
+    <!-- <link rel="stylesheet" th:href="@{/css/main-legacy.css}" /> -->
     <link rel="stylesheet" th:href="@{/css/style.css}" />
     <link rel="stylesheet" th:href="@{/css/color.css}" />
     <link rel="stylesheet" th:href="@{/css/responsive.css}" />
